[tool.poetry]
name = "postgres-api"
version = "0.1.0"
description = ""
authors = ["Zakhar Koryagin <koryagin.03@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
